Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: amazon
  template:
    metadata:
      labels:
        name: amazon
    spec:
      containers:
        - name: amazon
          image: niiyemo/amazon
          ports:
            - containerPort: 3000
