Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
  labels:
    app: amazon
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    name: amazon
